syntax = "proto3";
package types;

message EnumOption {
    string name = 1;
    Ty ty = 2;
}

message Enum {
    string name = 1;
    uint32 option = 2;
    repeated EnumOption options = 3;
}

message Primitive {
    oneof primitive_type {
        int32 i8 = 1;
        int32 i16 = 2;
        int32 i32 = 3;
        int64 i64 = 4;
        bytes i128 = 5;
        uint32 u8 = 6;
        uint32 u16 = 7;
        uint32 u32 = 8;
        uint64 u64 = 9;
        bytes u128 = 10;
        bytes u256 = 11;
        uint32 usize = 12;
        bool bool = 13;
        bytes felt252 = 14;
        bytes class_hash = 15;
        bytes contract_address = 16;
    }
}

message Struct {
    string name = 1;
    repeated Member children = 2;
}

message Array {
    repeated Ty children = 1;
}

message Ty {
    oneof ty_type {
        Primitive primitive = 2;
        Enum enum = 3;
        Struct struct = 4;
        Array tuple = 5;
        Array array = 6;
        string bytearray = 7;
    }
}

message Member {
    string name = 1;
    Ty ty = 2;
    bool key = 3;
}
